--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ naver_site_verification  :
 
 # Social Sharing
 twitter:
-  username               : @B3njam1nJH
+  username               : "@B3njam1nJH"
 facebook:
   username               :
   app_id                 :
