--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "benjaminjharding@hotmail.co.uk"
+      url: "mailto:benjaminjharding@hotmail.co.uk"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/B3njam1nJH"
@@ -124,7 +124,7 @@ footer:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "benjaminjharding@hotmail.co.uk"
+      url: "mailto:benjaminjharding@hotmail.co.uk"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/B3njam1nJH"
