--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ analytics:
 # Site Author
 author:
   name             : "Benjamin Harding"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "images/prof.jpg"
   bio              : "Computer Science Games Technology Undergraduate."
   location         : "Nottingham, United Kingdom."
   links:
