--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -22,7 +22,7 @@ en: &DEFAULT_EN
   comments_title             : "Comments"
   more_label                 : "Learn more"
   related_label              : "You may also enjoy"
-  follow_label               : "Contact and/or Follow:"
+  follow_label               : "Contact Links:"
   feed_label                 : "Feed"
   powered_by                 : "Powered by"
   website_label              : "Website"
