--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,13 @@ minimal_mistakes_skin    : "mint" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "en-GB"
-title                    : "Portfolio"
-title_separator          : "-"
+title                    : "Benjamin Harding - Portfolio"
+title_separator          : "|"
 name                     : "Benjamin Harding"
 description              : "A website showcasing examples of my work on programming and games design."
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+url                      : "https://sir-benj.github.io"
+baseurl                  : "/Portfolio"
+repository               : "Sir-Benj/Portfolio"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
