--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ naver_site_verification  :
 
 # Social Sharing
 twitter:
-  username               : "@B3njam1nJH"
+  username               : "B3njam1nJH"
 facebook:
   username               :
   app_id                 :
@@ -103,7 +103,7 @@ analytics:
 author:
   name             : "Benjamin Harding"
   avatar           : "images/prof.jpg"
-  bio              : "Computer Science Games Technology Undergraduate."
+  bio              : "Computer Science - Games Technology Undergraduate"
   location         : "Nottingham, United Kingdom."
   links:
     - label: "Email"
