--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@ main:
     url: /about/
   - title: "Programming"
     url: /programming/
-  - title: "Unity"
-    url: /unity/
+  - title: "Unity & Blender"
+    url: /unity&blender/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
